src/Components/Other/ModalImage/ModalImage.css
:local(.modalOverlay) {
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    padding: 1rem;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 9999;
    opacity: 1;
    overflow-x: hidden;
    overflow-y: hidden;
    animation: show .5s ease;
}

@keyframes show {
    0% {
        display: none;
        opacity: 0;
    }
    1% {
        display: flex;
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

:local(.modal) {
    width: 100%;
    background-color: #111;
    box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);
}

:local(.modalImage){
    position: absolute;
    max-width: 100%;
    height: auto;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

:local(.closeButton) {
    position: fixed;
    top: 0;
    right: 0;
    background: #fff;
    width: 2.5rem;
    height: 2.5rem;
    padding: 0;
    border: 0;
    cursor: pointer;
    outline: 0;
    box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);
}

:local(.closeButton:before),
:local(.closeButton:after) {
    content: "";
    position: absolute;
    top: 1.2rem;
    left: 0.25rem;
    width: 2rem;
    height: 0.1rem;
    background-color: #888;
}

:local(.closeButton:before) {
    transform: rotate(45deg);
}

:local(.closeButton:after) {
    transform: rotate(-45deg);
}

:local(.closeButton:hover:before),
:local(.closeButton:hover:after) {
    background-color: #444;
}

